# auth_callout_demo

./: .gitignore  README.md  client.py  main.py  nats.conf  pyproject.toml
demo/: main.py
nats_callout/: __init__.py  callout.py  jwt_tools.py
nats_callout/claims/: __init__.py  authorization_request.py  authorization_response.py  user.py
nats_jwt/: tools.py
nats_jwt/claims/: authorization_request.py  authorization_response.py  base.py  user.py
